--- a/src/scss/partials/_maincontent.scss
+++ b/src/scss/partials/_maincontent.scss
@@ -14,20 +14,57 @@ main {
 			}
 			.work-grid {
 				.work-row {
-					margin-bottom:0;
+					.container {
+						padding:0;
+						@media (min-width: $bp-md-min) {
+							padding: 0 calc(16px + (70 - 16) * (100vw - 320px) / (1440 - 320));
+						}
+						@media (min-width: $bp-lg-min) {
+							padding-left:15px;
+							padding-right:15px;
+						}
+					}
 					@media (min-width: $bp-sm-min) {
 						margin-bottom:50px;
 					}
 					@media (min-width: $bp-md-min) {
 						margin-bottom:100px;
 					}
+					
 					&:last-of-type {
 						margin-bottom:0;
+					}
+					&.work-row-full {
+						padding: calc(400px + (534 - 400) * (100vw - 320px) / (1440 - 320)) calc(15px + (80 - 15) * (100vw - 320px) / (1440 - 320));
+						padding-bottom:70px;
+						@media (min-width: $bp-xlg-min) {
+							padding: 534px 80px 80px;
+						}
+						.container {
+							padding-left:0;
+							padding-right:0;
+							@media (min-width: $bp-sm-min) {
+								padding-left:15px;
+								padding-right:15px;
+							}
+						}
 					}
 				}
 			}
 			.more-link-wrapper {
-				padding-left: 0;
+				padding-left:15px;
+				a {
+					@media (min-width: $bp-sm-min) {
+						margin-left:30px;
+					}
+					@media (min-width: $bp-lg-min) {
+						margin-left:0;
+					}
+				}
+				@media (min-width: $bp-lg-min) {
+					padding: 0 calc(16px + (70 - 16) * (100vw - 320px) / (1440 - 320));
+					padding-left:15px;
+				}	
 			}
 		}
 
@@ -55,12 +92,39 @@ main {
 					margin-top:15px;
 				}
 			}
+			.primary-articles {
+				padding-left:0px;
+				padding-right:0px;
+				@media (min-width: $bp-sm-min) {
+					padding-left:15px;
+					padding-right:15px;
+				}
+			}
 			.secondary-articles {
 				padding-left: 0;
     		padding-right: 0px;
+    		margin-left:0px;
+    		margin-right:0px;
     		@media (min-width: $bp-sm-min) {
 					padding-left: 15px;
     			padding-right: 15px;
+    			margin-left:-15px;
+    			margin-right:-15px;
+				}
+				@media (min-width: $bp-md-min) {
+					margin-left: 16.66666667%;
+				}
+
+				@media (min-width: 992px) {
+					/*width:100%;
+					float:left;
+					width:25%;*/
+				}
+			}
+			.more-link-wrapper {
+				padding-left:15px;
+				@media (min-width: $bp-sm-min) {
+					padding-left:15px;
 				}
 			}
 		}
@@ -69,6 +133,14 @@ main {
 			.more-link-wrapper {
 				margin: 0;
 				text-align: left;
+				padding-left:0;
+			}
+			.col-sm-8 {
+				padding:0;
+				@media (min-width: $bp-sm-min) {
+					padding-left:15px;
+					padding-right:15px;
+				}
 			}
 		}
 
@@ -77,7 +149,10 @@ main {
 		}
 
 		&.single-hero {
-			padding: calc(400px + (534 - 400) * (100vw - 320px) / (1440 - 320)) 0 calc(24px + (80 - 24) * (100vw - 320px) / (1440 - 320));
+			padding-left:0;
+			padding-right:0;
+			padding: calc(400px + (534 - 400) * (100vw - 320px) / (1440 - 320)) calc(24px + (80 - 24) * (100vw - 320px) / (1440 - 320));
+			padding-bottom:70px;
 			@media (min-width: $bp-xlg-min) {
 				padding: 534px 80px 80px;
 			}
@@ -114,6 +189,11 @@ main {
 			}
 		}
 		&.awards-press {
+			padding-left:0;
+			padding-right:0;
+			@media (min-width: $bp-sm-min) {
+				padding: calc(15px + (80 - 15) * (100vw - 400px) / (1440 - 400));
+			}
 			h2 {
 				font-size: calc(24px + (40 - 24) * (100vw - 320px) / (1440 - 320));
 				@media (min-width: $bp-xlg-min) {
@@ -152,6 +232,11 @@ main {
 			}
 		}
 		&.featured-products {
+			padding-left:0;
+			padding-right:0;
+			@media (min-width: $bp-sm-min) {
+				padding: calc(15px + (80 - 15) * (100vw - 400px) / (1440 - 400));
+			}
 			h2 {
 				font-size: calc(24px + (40 - 24) * (100vw - 320px) / (1440 - 320));
 				@media (min-width: $bp-xlg-min) {
@@ -162,8 +247,16 @@ main {
 				margin-bottom: 40px;
 			}
 			.work-row {
-				margin-left: -15px;
-				margin-right: -15px;
+				margin-left: 0;
+				margin-right: 0;
+				@media (min-width: $bp-sm-min) {
+					padding-left:0;
+					padding-right:0;
+				}
+				@media (min-width: $bp-md-min) {
+					margin-left: 0px;
+					margin-right: 0px;
+				}
 				h2 {
 					margin-bottom: 15px;
 				}
@@ -171,6 +264,11 @@ main {
 		}
 
 		&.also-see{
+			padding-left:0;
+			padding-right:0;
+			@media (min-width: $bp-sm-min) {
+				padding: calc(15px + (80 - 15) * (100vw - 400px) / (1440 - 400));
+			}
 			h2 {
 				font-size: calc(32px + (40 - 32) * (100vw - 320px) / (1440 - 320));
 				@media (min-width: $bp-xlg-min) {
@@ -181,8 +279,16 @@ main {
 				margin-bottom: 40px;
 			}
 			.work-row {
-				margin-left: -15px;
-				margin-right: -15px;
+				margin-left: 0px;
+				margin-right: 0px;
+				@media (min-width: $bp-sm-min) {
+					padding-left:0;
+					padding-right:0;
+				}
+				@media (min-width: $bp-md-min) {
+					margin-left: 0px;
+					margin-right: 0px;
+				}
 				h2 {
 					margin-bottom: 8px;
 					margin-top: 36px;
@@ -413,9 +519,13 @@ main {
 			}
 			.container {
 				padding:0;
+				@media (min-width: $bp-sm-min) {
+					width: 100%;
+					/*padding: 0 calc(16px + (70 - 16) * (100vw - 320px) / (1440 - 320));*/
+				}
 				@media (min-width: $bp-md-min) {
-					padding-right: 15px;
-  				padding-left: 15px;
+					width: 100%;
+					padding: 0;
 				}
 			}
 			.grid-item {
@@ -438,11 +548,11 @@ main {
 					padding: 0 15px;
 					margin-top:25px;
 					margin-bottom:8px;
+					padding: 0 15px;
 					@media (min-width: $bp-sm-min) {
 						padding: 0;
 					}
 					p {
-						padding: 0 15px;
 						@media (min-width: $bp-sm-min) {
 							padding: 0;
 						}
@@ -475,13 +585,19 @@ main {
 				.row {
 					margin-left: 0;
 					margin-right: 0;
-					padding-left: 15px;
-					padding-right: 15px;
 					@media (min-width: $bp-sm-min) {
 						margin-left: -15px;
 						margin-right: -15px;
 						padding-left: 0px;
 						padding-right: 0px;
+					}
+					.col-lg-5 {
+						padding-left: 0px;
+						padding-right: 0px;
+						@media (min-width: $bp-sm-min) {
+							padding-left: 15px;
+							padding-right: 15px;
+						}
 					}
 				}
 				.div {
@@ -502,6 +618,11 @@ main {
 					color: $white;
 					padding: 0;
 				}
+				.container {
+					width:100%;
+					padding: 0 calc(16px + (70 - 16) * (100vw - 320px) / (1440 - 320));
+
+				}
 			}
 		}
 	}
@@ -510,6 +631,12 @@ main {
 
 .blog {
 	#main {
+		.container {
+			@media (min-width: $bp-sm-min) {
+				width: 100%;
+				padding: 0 calc(16px + (70 - 16) * (100vw - 320px) / (1440 - 320));
+			}
+		}
 		.secondary-articles {
 			@media (min-width: $bp-sm3-min) {
 				position: fixed;
@@ -674,6 +801,38 @@ main {
 			}
 			.nav-previous {
 				display:none;
+			}
+		}
+	}
+}
+
+.page-template-page-work-landing {
+	.work-grid {
+		.work-row {
+			.container {
+				@media (min-width: $bp-md-min) {
+					padding: 0 calc(16px + (70 - 16) * (100vw - 320px) / (1440 - 320));
+				}
+			}
+		}
+	}
+}
+
+.page-template-page-things-landing {
+	.work-grid {
+		.work-row {
+			margin-left:0;
+			margin-right:0;
+			.container {
+				@media (min-width: $bp-md-min) {
+					padding: 0 calc(16px + (70 - 16) * (100vw - 320px) / (1440 - 320));
+				}
+				.work-row {
+					@media (min-width: $bp-md-min) {	
+						margin-left:-15px;
+						margin-right:-15px;
+					}
+				}
 			}
 		}
 	}
