--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -17,5 +17,5 @@ $bp-xs2-min: 680px;
 $bp-sm-min: 680px;
 $bp-sm3-min: 960px;
 $bp-md-min: 960px;
-$bp-lg-min: 1280px;
-$bp-xlg-min: 1280px;
+$bp-lg-min: 1320px;
+$bp-xlg-min: 1320px;
